manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    purpose: nginx-app
    managed-by: nginx-team
